--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8" />
-
+<div id="quiz-app"></div>
 <h2>[AKLO]</h2>
 
 <span class="sentence">Everyday I Wake Up</span>
