Vocab quizzes in

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li class="quizzable vocab">遣る・行る「やる」：① to do/to undertake/to perform/to play (a game)/to study #1012980</li>
     <li class="quizzable vocab">事・縡「こと・こん」：① thing/matter #1313580</li>
     <li class="quizzable vocab">明確「めいかく」：① clear/precise/definite/distinct #1532410</li>
+    <li class="quizzable vocab">少し・寡し・些し「すこし」：① small quantity/little/few/something #1348870</li>
   </ul>
 </details>
 
@@ -30,6 +31,7 @@
     <li class="quizzable particle">で</li>
     <li class="quizzable particle">も</li>
     <li class="quizzable conjugated">良くする：<ruby>良<rt>よ</rt></ruby>い ＋ する</li>
+    <li class="quizzable vocab">遣る・行る「やる」：① to do/to undertake/to perform/to play (a game)/to study #1012980</li>
     <li class="quizzable vocab">少し・寡し・些し「すこし」：① small quantity/little/few/something #1348870</li>
     <li class="quizzable vocab">「でも」：① but/however/though/nevertheless/still/yet/even so/also/as well #1008460</li>
     <li class="quizzable vocab">良くする・善くする・能くする「よくする」：① to make good/to improve #2257610</li>
